--- a/Style1.css
+++ b/Style1.css
@@ -20,7 +20,31 @@ h1 {
         transform: scale(1.3);
     }
 /* This is the main navbar container */
-.navbar {
+.content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%; /* Full width of the parent element */
+}
+.tradingview-chartWidget-container {
+    height: 500px; /* Adjust height as needed */
+    width: 70%; /* Adjust width as needed */
+    /*margin: 0 auto;*/ /* Center the element horizontally */
+}
+
+.tradingview-chartWidget-container__widget {
+    height: calc(100% - 32px); /* Automatically calculate height based on the container's height */
+    width: 100%; /* Use 100% of the container's width */
+    margin: 0 auto; /* Center the element horizontally */
+}
+
+.big7Display {
+    height: 500px; /* Adjust height as needed */
+    width: 70%; /* Adjust width as needed */
+    margin: 0; /* Ensure no margin */
+    padding: 0; /* Ensure no padding */
+
+
+    .navbar {
     display: flex;
     justify-content: center; /* This centers the contents horizontally */
 }
