--- a/Style2.css
+++ b/Style2.css
@@ -17,58 +17,8 @@
     justify-content: center; /* Center content horizontally inside the container */
     align-items: center; /* Center content vertically inside the container */
 }
+
 .tradingview-widget-copyright {
-    display: none; /* This will hide the element */
+    display: none;
+    /* This will hide the element */
 }
-/* This is the main navbar container */
-.navbar {
-    display: flex;
-    justify-content: center; /* This centers the contents horizontally */
-}
-
-    /* This sets the shape and margins of the navbar */
-    .navbar ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        margin-top: 50px;
-        margin-bottom: 25px;
-        display: flex; /* Align items horizontally in a row */
-        gap: 20px; /* Add spacing between each item if needed */
-    }
-
-    /* This designs each button on the navbar */
-    .navbar a {
-        position: relative;
-        color: white;
-        font-size: 20px;
-        text-decoration: none;
-        padding: 15px;
-        display: block;
-        text-align: center;
-        transition: 0.5s;
-    }
-
-        /* This sets a hover feature for the navbar */
-        .navbar a:hover {
-            color: blue;
-        }
-
-        .navbar a span {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            border-bottom: 2px solid blue;
-            border-radius: 15px;
-            transform: scale(1) translateY(50px);
-            opacity: 0;
-            transition: 0.5s;
-        }
-
-        .navbar a:hover span {
-            transform: scale(1) translateY(0);
-            opacity: 1;
-        }
