--- a/Style1.css
+++ b/Style1.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿* {
+    box-sizing: border-box;
+}
+
+body {
     background-color: black;
     color: white;
     margin: 0;
@@ -48,7 +52,7 @@ h1 {
     /* Adjust height as needed */
     width: 70%;
     /* Adjust width as needed */
-    /*margin: 0 auto;*/
+    /* margin: 1rem auto; */
     /* Center the element horizontally */
 }
 
@@ -59,6 +63,10 @@ h1 {
     /* Use 100% of the container's width */
     margin: 0 auto;
     /* Center the element horizontally */
+}
+
+.tradingview-wmarketWatchWidget-container{
+    margin: 1rem auto;
 }
 
 .big7Display {
@@ -186,14 +194,16 @@ footer {
   } */
 
   .parent {
-    border: 1px solid black;
+    /* border: 1px solid red; */
     margin: 1rem;
-    padding: 2rem 2rem;
+    /* padding: 2rem 2rem; */
     text-align: center;
   }
   .child {
+    /* border: 1px solid red; */
     display: inline-block;
     /* border: 1px solid red; */
     padding: 1rem 1rem;
-    vertical-align: middle;
+    vertical-align: top;
+    margin: 1rem;
   }
