--- a/Style1.css
+++ b/Style1.css
@@ -69,16 +69,6 @@ h1 {
     margin: 1rem auto;
 }
 
-.big7Display {
-    height: 500px;
-    /* Adjust height as needed */
-    width: 70%;
-    /* Adjust width as needed */
-    margin: 0;
-    /* Ensure no margin */
-    padding: 0;
-    /* Ensure no padding */
-}
 
 .navbar {
     display: flex;
@@ -144,9 +134,9 @@ footer {
 }
 
 .footer-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
 }
 
 .footer-links {
@@ -167,32 +157,6 @@ footer {
     font-size: 16px;
 }
 
-#sidebar {
-    width: 450px;
-    padding: 20px;
-    background-color: black;
-    /* box-shadow: -2px 0 5px rgba(0,0,0,0.1); */
-    box-sizing: border-box;
-    overflow-y: auto; /* Enables scrolling if the content is taller than the viewport */
-    position: sticky;
-    top: 10px; /* distance from the top of the viewport */
-    align-self: flex-start;
-}
-
-/* aside {
-    width: 40%;
-    padding-left: 0.5rem;
-    margin-left: 0.5rem;
-    float: right;
-    box-shadow: inset 5px 0 5px -5px #29627e;
-    font-style: italic;
-    color: #29627e;
-  }
-  
-  aside > main {
-    margin: 0.5rem;
-  } */
-
   .parent {
     /* border: 1px solid red; */
     margin: 1rem;
@@ -200,7 +164,6 @@ footer {
     text-align: center;
   }
   .child {
-    /* border: 1px solid red; */
     display: inline-block;
     /* border: 1px solid red; */
     padding: 1rem 1rem;
