--- a/Style1.css
+++ b/Style1.css
@@ -27,7 +27,7 @@ h1 {
 }
 .tradingview-chartWidget-container {
     height: 500px; /* Adjust height as needed */
-    width: 70%; /* Adjust width as needed */
+    width: 1000px; /* Adjust width as needed */
     /*margin: 0 auto;*/ /* Center the element horizontally */
 }
 
